--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="" class="nav-link">Blogs</a>
             </li>
             <li class="list-inline-item">
-              <a href="" class="nav-link"> Contact</a>
+              <a href="" class="nav-link"></a>
             </li>
           </ul>
         </div>
@@ -152,6 +152,111 @@
 
 
     <!-- Blogs -->
+
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col">
+          <div class="h-1 bg-gray-200 rounded overflow-hidden">
+            <div class="w-24 h-full bg-indigo-500"></div>
+          </div>
+          <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
+            <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Browse Blogs</h1>
+            <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0"></p>
+          </div>
+        </div>
+        <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://miro.medium.com/max/875/0*HqjPTUYgg2xLQ88f">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">How an Web App works ?? To understand for a Beginner!</h2>
+            <p class="text-base leading-relaxed mt-2">To understand how an web app works we can easily apply our basic knowledge. Anything in industries takes an Input ,Process and produces.......</p>
+            <a class="text-indigo-500 inline-flex items-center mt-3"href="https://medium.com/@chandantmchandu31/how-an-web-app-works-to-understand-for-a-beginner-74fb19d1f9ca">Read Blog
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://miro.medium.com/max/738/1*LQ6MVPh0YSKaTOCVdElrkg.jpeg">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">What is API ….!! simple explanation.</h2>
+            <p class="text-base leading-relaxed mt-2">Ever thought of how travel booking sites and hotels having thousands of options but if we want best and the cheapest options can be known.....</p>
+            <a class="text-indigo-500 inline-flex items-center mt-3" href="https://medium.com/@chandantmchandu31/what-is-api-simple-explanation-e35cb1107079">Read Blog
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+         
+        </div>
+      </div>
+    </section>
+
+    <!-- contact -->
+    <section class="text-gray-600 body-font relative">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-12">
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Me</h1>
+          <!-- <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p> -->
+        </div>
+        <!-- <div class="lg:w-1/2 md:w-2/3 mx-auto">
+          <div class="flex flex-wrap -m-2">
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                 <label for="name" class="leading-7 text-sm text-gray-600">Name</label> -->
+                <!-- <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"> -->
+              </div>
+            </div>
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                <!-- <label for="email" class="leading-7 text-sm text-gray-600">Email</label> -->
+                <!-- <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"> -->
+              </div>
+            </div>
+            <div class="p-2 w-full">
+              <div class="relative">
+                <!-- <label for="message" class="leading-7 text-sm text-gray-600">Message</label> -->
+                <!-- <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea> -->
+              </div>
+            </div> -->
+            <!-- <div class="p-2 w-full">
+              <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+            </div> -->
+            <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
+              <a class="text-indigo-500">chandantm317@gmail.com</a>
+              <p class="leading-normal my-5">Bengaluru
+                <br>Karnataka,India
+              </p>
+              <span class="inline-flex">
+                <!-- <a class="text-gray-500">
+                  <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                  </svg>
+                </a>
+                <a class="ml-4 text-gray-500">
+                  <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                  </svg>
+                </a> -->
+                <!-- <a class="ml-4 text-gray-500" href="">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                    <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                  </svg>
+                </a> -->
+                <a class="ml-4 text-gray-500 " href="https://github.com/chandan317"> Github
+                  <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>
+                </a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
   </body>
 </html>
