--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </section>
       <!-- Home -->
-      <section
+      <section id="home"
         class="Home d-flex justify-content-around align-items-center container"
       >
         <div class="intro mx-5 px-5">
@@ -153,7 +153,7 @@
 
     <!-- Blogs -->
 
-    <section class="text-gray-600 body-font">
+    <section id="blogs" class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col">
           <div class="h-1 bg-gray-200 rounded overflow-hidden">
