--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#projects"  class="nav-link"> Projects</a>
             </li>
             <li class="list-inline-item">
-              <a href="" class="nav-link">Blogs</a>
+              <a href="#blogs" class="nav-link">Blogs</a>
             </li>
             <li class="list-inline-item">
               <a href="" class="nav-link"></a>
