--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
       
     </section>
      <!-- Projects -->
-    
+<!--     
     <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
     <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" >
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"> </h1>
       <p class="mb-8 leading-relaxed"></p>
       <div class="flex justify-center">
-<!--         <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="">Live project</a></button> -->
-<!--         <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href=""> Github Source Code</a></button> -->
+        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="">Live project</a></button>
+        <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href=""> Github Source Code</a></button>
       </div>
     </div>
   </div>
-</section>
+</section> -->
     <section href=""  id="projects" class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap -mx-4 -mb-10 text-center">
