--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="flex flex-wrap -mx-4 -mb-10 text-center">
           <div class="sm:w-1/2 mb-10 px-4">
             <div class="rounded-lg h-64 overflow-hidden">
-              <img alt="content" width="33%" class="object-cover object-center h-full w-full" src=""https://images.pexels.com/photos/707251/pexels-photo-707251.jpeg?auto=compress&cs=tinysrgb&w=600>
+              <img alt="content" width="33%" class="object-cover object-center h-full w-full" src="https://images.pexels.com/photos/707251/pexels-photo-707251.jpeg?auto=compress&cs=tinysrgb&w=600">
     <div class="text-center lg:w-2/3 w-full">
             </div>
             <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Food Recipe App</h2>
