--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap -mx-4 -mb-10 text-center">
           <div class="sm:w-1/2 mb-10 px-4">
-<!--             <div class="rounded-lg h-64 overflow-hidden">
+<!--            
               <img alt="content" width="33%" class="object-cover object-center h-full w-full" src="https://images.pexels.com/photos/707251/pexels-photo-707251.jpeg?auto=compress&cs=tinysrgb&w=600">
     <div class="text-center lg:w-2/3 w-full">
             </div>
@@ -107,6 +107,7 @@
             <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://foodrecipeapi.vercel.app/">Live project</a></button>
             <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://github.com/chandan317/foodapp"> Github Source Code</a></button>
           </div> -->
+             <div class="rounded-lg h-64 overflow-hidden">
                <div class="sm:w-1/2 mb-10 px-4">
             <div class="rounded-lg h-64 overflow-hidden">
               <img alt="content" class="object-cover object-center h-full w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeQs94_7kIJ_SMG6rAXX4jf4NQTDTPd3EFVQ&usqp=CAU">
@@ -128,6 +129,7 @@
             <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://cartoons-mu.vercel.app/">Live project</a></button>
             <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://github.com/chandan317/cartoons"> Github Source Code</a></button>
           </div>
+            </div>
         </div>
       </div>
     </section>
