--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
    
       
 <!--       projects new -->
-      <section class="text-gray-600 body-font">
+      <section  id ="projects"class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
       <div class="sm:w-1/2 mb-10 px-4">
