--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Food Recipe App</h2>
         <p class="leading-relaxed text-base">Api fetch Food Recipe App</p>
-            <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://https://foodrecipeapi.vercel.app/">Live project</a></button>
+            <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://foodrecipeapi.vercel.app/">Live project</a></button>
             <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded"><a href="https://github.com/chandan317/foodapp"> Github Source Code</a></button>
       </div>
       <div class="sm:w-1/2 mb-10 px-4">
