--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
           <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Me</h1>
           <!-- <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p> -->
         </div>
+        <h1><a href="https://www.linkedin.com/in/chandantm317/> LinkedIn<a/></h1>
         <!-- <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
@@ -236,7 +237,7 @@
                 <!-- <label for="message" class="leading-7 text-sm text-gray-600">Message</label> -->
                 <!-- <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea> -->
               </div>
-            </div> -->
+            </div> 
             <!-- <div class="p-2 w-full">
               <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
             </div> -->
