--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
         </svg> -->
       </a>
-      <h1> LinkedIn</h1>
+      <h1><a href="https://www.linkedin.com/in/chandantm317/"> LinkedIn</a></h1>
       <a class="ml-3 text-gray-500" href="https://www.linkedin.com/in/chandantm317/">
         
         <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
